# scyllapy

./: .gitignore  .pre-commit-config.yaml  .python-version  Cargo.toml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  musl.yaml  release.yaml  test.yaml  ttest.yml
python/chatty_scylla/: __init__.py  _dtos.pyi  _internal.pyi
python/scyllapy/: __init__.py  _internal.pyi  exceptions.py  extra_types.py  load_balancing.py  query_builder.py
python/scyllapy/_internal/: __init__.pyi  exceptions.pyi  extra_types.pyi  load_balancing.pyi  query_builder.pyi
python/tests/: conftest.py  docker-compose.yaml  test_batches.py  test_bindings.py  test_extra_types.py  test_lib.py  test_pagination.py  test_parsing.py  test_prepared.py  test_profiles.py  test_queries.py  test_query_res.py  utils.py
python/tests/query_builders/: test_delete.py  test_inserts.py  test_select.py  test_update.py
scripts/: version_bumper.py
src/: batches.rs  consistencies.rs  consistency.rs  dtos.rs  execution_profiles.rs  extra_types.rs  inputs.rs  lib.rs  load_balancing.rs  prepared_queries.rs  prepared_query.rs  queries.rs  query.rs  query_results.rs  scylla_cls.rs  scylla_main.rs  utils.rs
src/exceptions/: mod.rs  py_err.rs  rust_err.rs
src/query_builder/: delete.rs  insert.rs  mod.rs  select.rs  update.rs  utils.rs
