[package]
name = "scyllapy"
version = "1.2.0"
edition = "2021"

[lib]
name = "scyllapy"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
eq-float = "0.1.0"
futures = "0.3.28"
log = "0.4.20"
openssl = { version = "0.10.57", features = ["vendored"] }
pyo3 = { version = "0.19.2", features = [
    "auto-initialize",
    "abi3-py38",
    "extension-module",
    "chrono",
] }
pyo3-asyncio = { version = "0.19.0", features = ["tokio-runtime"] }
pyo3-log = "0.8.3"
scylla = { version = "0.9.0", features = ["ssl"] }
scylla-cql = "0.0.8"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["bytes"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
